# z2-polynomials

./: .gitignore  CMakeLists.txt  Polynomial.cpp  Polynomial.h  README.md  Z2.cpp  Z2.h  test.cpp
src/: Polynomial.cpp  Z2.cpp
tests/: test.cpp
